--- a/html_email2_responsive/style.css
+++ b/html_email2_responsive/style.css
@@ -3,6 +3,12 @@ body {
 	padding: 0;
 }
 
+#inbox-text-preview {
+	font-size: 1px;
+	color: black;
+	display: none;
+}
+
 /* if screen width is less then 660px */
 @media only screen and (max-width: 660px) {
 	table.container {
